added charactertem routers
