# docs/swagger.yaml
@@ -143,6 +143,18 @@ definitions:
       quantity:
         type: integer
     type: object
+  model.CharacterItemExternal:
+    properties:
+      character_id:
+        type: integer
+      id:
+        type: integer
+      item_id:
+        type: integer
+      quantity:
+        example: 1
+        type: integer
+    type: object
   model.CharacterUpdateExternal:
     properties:
       alias:
@@ -181,6 +193,19 @@ definitions:
         type: string
     required:
     - name
+    type: object
+  model.CreateCharacterItem:
+    properties:
+      character_id:
+        type: integer
+      item_id:
+        type: integer
+      quantity:
+        example: 1
+        type: integer
+    required:
+    - character_id
+    - item_id
     type: object
   model.CreateDomain:
     properties:
@@ -427,9 +452,9 @@ definitions:
     properties:
       bulk:
         type: number
-      character:
+      characterItem:
         items:
-          $ref: '#/definitions/model.Character'
+          $ref: '#/definitions/model.CharacterItem'
         type: array
       description:
         type: string
@@ -482,6 +507,18 @@ definitions:
         type: string
       price:
         type: string
+    type: object
+  model.UpdateCharacterItem:
+    properties:
+      character_id:
+        type: integer
+      item_id:
+        type: integer
+      quantity:
+        example: 1
+        type: integer
+    required:
+    - quantity
     type: object
   model.UpdateDomain:
     properties:
@@ -620,6 +657,139 @@ info:
   title: Kingdom Api
   version: 0.1.0
 paths:
+  /CharacterItem:
+    get:
+      consumes:
+      - application/json
+      description: Return all CharacterItems
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: CharacterItem details
+          schema:
+            $ref: '#/definitions/model.CharacterItem'
+        "401":
+          description: Unauthorized
+          schema:
+            type: string
+      summary: Returns all CharacterItems
+      tags:
+      - CharacterItem
+    post:
+      consumes:
+      - application/json
+      description: Permissions for Admin
+      parameters:
+      - description: CharacterItem data
+        in: body
+        name: characterItem
+        required: true
+        schema:
+          $ref: '#/definitions/model.CreateCharacterItem'
+      produces:
+      - application/json
+      responses:
+        "201":
+          description: CharacterItem details
+          schema:
+            $ref: '#/definitions/model.CharacterItemExternal'
+        "401":
+          description: Unauthorized
+          schema:
+            type: string
+        "403":
+          description: You can't access for this API
+          schema:
+            type: string
+      summary: Create and returns CharacterItem or nil
+      tags:
+      - CharacterItem
+  /CharacterItem/{id}:
+    delete:
+      consumes:
+      - application/json
+      description: Permissions for Admin
+      parameters:
+      - description: CharacterItem id
+        in: path
+        name: id
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "204":
+          description: No Content
+        "403":
+          description: You can't access for this API
+          schema:
+            type: string
+        "404":
+          description: CharacterItem doesn't exist
+          schema:
+            type: string
+      summary: Deletes CharacterItem by ID or returns nil
+      tags:
+      - CharacterItem
+    get:
+      consumes:
+      - application/json
+      description: Retrieve CharacterItem details using its ID
+      parameters:
+      - description: CharacterItem id
+        in: path
+        name: id
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: CharacterItem details
+          schema:
+            $ref: '#/definitions/model.CharacterItem'
+        "404":
+          description: CharacterItem not found
+          schema:
+            type: string
+      summary: Returns CharacterItem by id
+      tags:
+      - CharacterItem
+    patch:
+      consumes:
+      - application/json
+      description: Permissions for Admin
+      parameters:
+      - description: CharacterItem id
+        in: path
+        name: id
+        required: true
+        type: integer
+      - description: CharacterItem data
+        in: body
+        name: characterItem
+        required: true
+        schema:
+          $ref: '#/definitions/model.UpdateCharacterItem'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: CharacterItem details
+          schema:
+            $ref: '#/definitions/model.CharacterItemExternal'
+        "403":
+          description: You can't access for this API
+          schema:
+            type: string
+        "404":
+          description: CharacterItem doesn't exist
+          schema:
+            type: string
+      summary: Updates CharacterItem by ID or nil
+      tags:
+      - CharacterItem
   /character:
     get:
       consumes:
